--- a/content/brand.html
+++ b/content/brand.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-  <meta charset="UTF-8">
-  <title>XPG 브랜드</title>
-  <link rel="stylesheet" href="css/brand.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XPG | 연혁</title>
+
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="css/brand.css">
+
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/brand.js"></script>
 </head>
+
 <body>
-  <header>
-        <!-- 헤더에 로고/아이콘 크기는 따로 맞추기 1620px -->
 
-
+    <header>
         <div class="share-inner clear">
             <div class="h-logo">
-                <h1><a href="#"><img src="brand-story/xpg-logo.png" alt="XPG"></a></h1>
+                <h1><a href="../index.html"><img src="img/xpg-logo.png" alt="XPG"></a></h1>
             </div>
 
             <nav>
@@ -29,16 +36,16 @@
                         <a href="#">제품</a>
 
                         <ul class="lnb">
-                            <li><a href="gear/mouse.html">마우스</a></li>
-                            <li><a href="gear/keyboard.html">키보드</a></li>
-                            <li><a href="gear/headset.html">헤드셋</a></li>
+                            <li><a href="mouse.html">마우스</a></li>
+                            <li><a href="keyboard.html">키보드</a></li>
+                            <li><a href="headset.html">헤드셋</a></li>
                             <li><a href="#">케이스</a></li>
                             <li><a href="#">SSD</a></li>
                         </ul>
                     </li>
 
                     <li>
-                        <a href="#">고객지원</a>
+                        <a href="user.html">고객지원</a>
 
                         <ul class="lnb">
                             <li><a href="#">문의하기</a></li>
@@ -48,78 +55,332 @@
                     </li>
 
                     <li>
-                        <a href="#">커뮤니티</a>
+                        <a href="comunity.html">커뮤니티</a>
                     </li>
                 </ul>
             </nav>
 
             <div class="h-icon">
-                <a href=""><img src="img/search.png" alt="검색"></a>
-                <a href=""><img src="img/user.png" alt="검색"></a>
-                <a href=""><img src="img/support.png" alt="검색"></a>
+                <a href=""><img src="../img/search.png" alt="검색"></a>
+                <a href=""><img src="../img/user.png" alt="유저"></a>
+                <a href=""><img src="../img/support.png" alt="고객지원"></a>
             </div>
         </div>
     </header>
 
+    <main>
+        <!-- ::before -->
+        <!-- <div class="m-intro">
+            <img src="img/AboutXPG.gif" alt="인트로">
+        </div> -->
 
-  <!-- 메인 비주얼 영역 -->
-  <section class="main-visual">
-    <img src="brand-story/AboutXPG.gif" alt="XPG Intro">
-    <div class="main-text">
-      <img src="brand-story/xpg-logo.png" alt="XPG 로고">
-      <h2>XTREME PERFORMANCE GEAR</h2>
-      <p>모든 게이머를 위해 재미있는 콘텐츠, 제품 및 서비스를 다양하게 생산하는 게이밍 브랜드입니다.</p>
-    </div>
-  </section>
+        <div class="m-box">
+            <h1><img src="img/xpg-logo.png" alt="로고"></h1>
 
-  <!-- 익스트림 소개 -->
-  <section class="extreme">
-    <h2>게임을 익스트림하게</h2>
-    <p>
-      XPG는 2008년 ADATA에서 탄생한 글로벌 프리미엄 게이밍 브랜드이며, 고성능 PC 컴포넌트 및 액세서리를 제조하고 있습니다.
-      우리는 게이머와 하이엔드 사용자에게 최고의 성능과 디자인을 제공합니다.
-    </p>
-  </section>
+            <h2>
+                XTREME PERFORMANCE GEAR
+            </h2>
 
-  <!-- 소개 텍스트 + 이미지 -->
-  <section class="intro-by-adata">
-    <h2>Xtreme Performance Gear,<br>by ADATA</h2>
-    <p>
-      XPG는 ADATA의 기술력을 기반으로 설계된 하이엔드 게이밍 브랜드입니다. <br>
-      우리는 게이머와 PC 유저들이 기대하는 성능을 뛰어넘는 제품을 제공합니다.
-    </p>
-    <img src="img/player.jpg" alt="게이머 이미지">
-  </section>
+            <p>
+                모든 게이머를 위해 재미있는 콘텐츠, 제품 및 서비스를 다양하게 생산하는 게임 브랜드입니다.
+            </p>
+        </div>
+    </main>
 
-  <!-- 연혁 섹션 -->
-  <section class="history">
-    <h2>연혁</h2>
-    <div class="history-banner">
-      <img src="img/xpg-banner.png" alt="XPG Banner">
-    </div>
-    <ul class="year-list">
-      <li>2025</li><li>2024</li><li>2023</li><li>2022</li><li>2021</li>
-      <li>2020</li><li>2019</li><li>2018</li><li>2013-2017</li><li class="active">2008-2012</li>
-    </ul>
-    <div class="year-desc">
-      <h3>2008-2012</h3>
-      <p>
-        ADATA가 DRAM 및 SSD 카테고리에서 XPG 브랜드 제품을 출시했습니다.<br>
-        ADATA의 CEO인 Simon Chen이 XPG를 ADATA의 게이밍 하위 브랜드로 설립했습니다.
-      </p>
-    </div>
-  </section>
+    <section class="h-content">
+        <div class="h-inner">
+            <div class="h-txtbox">
+                <h2>
+                    게임을 익스트림하게
+                </h2>
 
-  <!-- Exoskeleton -->
-  <section class="exoskeleton">
-    <h2>:Exoskeleton</h2>
-    <p>
-      XPG는 성능과 디자인의 균형을 위해 전격 디자인 전략인 'Exoskeleton'을 개발했습니다.<br>
-      이 전략은 내부와 외부에서 모두 돋보이는 초현대적 외형을 구성합니다.<br>
-      이 철학은 모든 제품에 적용되어 더 높은 완성도를 지향합니다.
-    </p>
-    <img src="img/pcbuild.jpg" alt="XPG PC">
-  </section>
+                <p>
+                    XPG는 2008년 ADATA에서 다음과 같은 단 하나의 목표만 염두에 두고 탄생했습니다. <br>
+                    게임 환경을 향상시키는 고품질 제품의 제작. <br>
+                    당사는 업계의 한계를 뛰어 넘어 게이머의 삶의 질을 높이는 신제품과,<br>
+                    새로운 서비스를 만들기 위해 최선을 다하고 있습니다.
+                </p>
+            </div>
+
+            <img src="img/brand.png" alt="여자">
+        </div>
+    </section>
+
+    <section class="h-container">
+        <h1>연혁</h1>
+
+        <!-- 
+        .viewer : 실제 슬라이드가 보여지는 공간
+        .viewer .history-wrap : 슬라이드 전체를 담는 부모
+        .viewer .history-wrap > div : .history, .history2 -> 각 슬라이드
+        -->
+        <div class="viewer">
+            <div class="history-wrap clear">
+                <div class="history">
+                    <!-- .h-history:내용의덩어리 -->
+                    <div class="h-history">
+
+                        <div class="h-con clear">
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <div class="year-new">
+                                    <h3>2008 - <br>
+                                        2011
+                                    </h3>
+                                </div>
+
+                                <p>
+                                    XPG는 2008년 ADATA의 게임용 하위 브랜드로 설립되어 DRAM, SSD 등 다양한 제품을 출시하고 수상했습니다.
+                                    2011년에는 메모리 카드와 보조 배터리로 포트폴리오를 확장했습니다.
+                                </p>
+                            </div>
+
+                            <!-- <div class="h-box">
+                        <img src="img/history-down.png" alt="연혁테두리">
+
+                        <h3>2008 - <br>
+                            2011
+                        </h3>
+
+                        <p>
+                            XPG는 2008년 ADATA의 게임용 하위 브랜드로 설립되어 DRAM, SSD 등 다양한 제품을 출시하고 수상했습니다.
+                            2011년에는 메모리 카드와 보조 배터리로 포트폴리오를 확장했습니다.
+                        </p>
+                    </div> -->
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+                                <p>
+                                    XPG는 2014~2017년 DDR4 메모리, SSD로 세계 기록과 여러 상을 수상하며 기술력을 입증했습니다.
+                                    또한 e스포츠 후원과 주변 기기 출시로 게이밍 시장을 적극 확대했습니다.
+                                </p>
+
+                                <div class="year-new2">
+                                    <h3>2014 - <br>
+                                        2017
+                                    </h3>
+                                </div>
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <div class="year-new">
+                                    <h3>2018</h3>
+                                </div>
+
+                                <p>
+                                    XPG는 DRAM, SSD, 주변기기로 포트폴리오를 확장하고
+                                    수상·세계 기록·e스포츠 후원으로입지를 강화했습니다.
+                                </p>
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+                                <p>
+                                    XPG는 Mera를 홍보 대사로 선정하고 주요 신제품과 쿨러를 공개했으며,
+                                    SPECTRIX D80으로 수상과 e스포츠 후원을 이어갔습니다.
+                                </p>
+
+                                <div class="year-new2">
+                                    <h3>
+                                        2019
+                                    </h3>
+                                </div>
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <div class="year-new">
+                                    <h3>2020</h3>
+                                </div>
+
+                                <p>
+                                    XPG는 CES에서 Intel과 XENIA 15 및 GAIA를 공동 발표하고,
+                                    업계 최고 수준의 하드웨어 포트폴리오와 PRIME 소프트웨어를 공개했습니다.
+                                    다양한 제품으로 국제 디자인 상을 수상했으며, 주요 e스포츠 대회를 공식 후원했습니다.
+                                </p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="history">
+
+                    <!-- .h-history:내용의덩어리 -->
+                    <div class="h-history">
+
+                        <div class="h-con clear">
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <div class="year-new">
+                                    <h3>2021
+                                    </h3>
+                                </div>
+
+                                <p>
+                                    XPG는 MANA Gaming 츄잉껌으로 CES 혁신상을 수상하고,
+                                    Xtreme Saga 애니메이션 시리즈와 GRIT 커뮤니티를 공개했습니다.
+                                    또한 다양한 제품으로 Red Dot, Golden Pin 등 글로벌 디자인 어워드를 다수 수상했습니다.
+                                </p>
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <p>
+                                    XPG는 Xtreme Saga Fan Club NFT 출시와 MERAVERSE 설립으로 Web 3.0 영역을 확장했습니다.
+                                    또한 CASTER, SLAYER, ALPHA 등 주요 제품으로 Red Dot 및 Taiwan Excellence Award를 수상했습니다.
+                                </p>
+
+                                <div class="year-new2">
+                                    <h3>2022
+                                    </h3>
+                                </div>
+
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <div class="year-new">
+                                    <h3>2023
+                                    </h3>
+                                </div>
+
+                                <p>
+                                    XPG는 BATTLECRUISER II, LANCER DDR5 등 주요 제품으로 Taiwan Excellence Award와 Red Dot Design
+                                    Award를
+                                    수상했습니다.
+                                    또한 FUSION TITANIUM PSU로 Best of Computex Award를 수상하며 기술력을 인정받았습니다.
+                                </p>
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <p>
+                                    PRIME BOX를 탑재한 게이밍 섀시 BATTLECRUISER II로 Red Dot Design Award를 수상했습니다.
+                                    INVADER X가 iF Design Award를 수상.
+                                </p>
+
+                                <div class="year-new2">
+                                    <h3>2024
+                                    </h3>
+                                </div>
+
+                            </div>
+
+                            <div class="h-box">
+                                <!-- <img src="img/history-down.png" alt="연혁테두리"> -->
+
+                                <div class="year-new">
+                                    <h3>2023
+                                    </h3>
+                                </div>
+
+                                <p>
+                                    XPG는 LANCER DDR5와 HURRICANE 팬으로 Red Dot Award를, NEON DDR5와 INVADER X로 CES 및 Taiwan
+                                    Excellence Award를 수상했습니다.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 버튼위치 여기에!!! -->
+            <div class="btngrp">
+                <button id="prev">&lt;</button>
+                <button id="next">&gt;</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="h-adata">
+        <div>
+            <h2>
+                Xtreme Performance Gear, <br>
+                by ADATA
+            </h2>
+
+            <p>
+                XPG는 ADATA의 기술력을 기반으로 설계된 하이엔드 게이밍 브랜드입니다. <br>
+                우리는 게이머와 PC 하드웨어 마니아의 니즈를 정확히 이해하고, <br>
+                그들의 기대를 넘어서는 성능을 제공하는 것을 목표로 합니다.
+            </p>
+
+            <img src="img/brand1.png" alt="남자">
+        </div>
+    </section>
+
+    <section class="h-exo">
+        <h2>
+            :Exoskeleton
+        </h2>
+
+        <p>
+            XPG는 성능과 디자인의 균형을 위해 자체 디자인 철학인 :Exoskeleton을 개발해왔습니다. <br>
+            이는 성능과 외관이 서로를 보완하며 조화를 이루도록 설계된 방식입니다. <br>
+            이 철학은 모든 제품에 적용되어 더욱 완성도 높은 Xtreme Performance Gear를 만듭니다.
+        </p>
+
+        <img src="img/brand3.png" alt="케이스">
+    </section>
+
+    <footer>
+        <div class="f-container clear">
+            <div class="inner">
+                <nav class="f-txtbox clear">
+                    <ul class="f-txt">
+                        <li>
+                            <h2>구매하기</h2>
+                        </li>
+                        <li><a href="#">신제품</a></li>
+                        <li><a href="#">추천제품</a></li>
+                    </ul>
+
+                    <ul class="f-txt">
+                        <li>
+                            <h2>지원</h2>
+                        </li>
+                        <li><a href="#">다운로드</a></li>
+                        <li><a href="#">고객지원</a></li>
+                    </ul>
+
+                    <ul class="f-txt">
+                        <li>
+                            <h2>개인정보 취급방침</h2>
+                        </li>
+                        <li><a href="#">이용약관</a></li>
+                    </ul>
+                </nav>
+
+                <nav class="f-iconbox">
+                    <ul class="f-icon clear">
+                        <li><a href="#"><img src="../img/facebook.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="../img/insta.png" alt="인스타"></a></li>
+                        <li><a href="#"><img src="../img/youtube.png" alt="유튜브"></a></li>
+                        <li><a href="#"><img src="../img/discord.png" alt="디스코드"></a></li>
+                        <li><a href="#"><img src="../img/tictok.png" alt="틱톡"></a></li>
+                    </ul>
+
+                    <p>
+                        Copyright ⓒ 2025 ADATA Technology Co. LTD. All right reserved
+                    </p>
+                </nav>
+
+            </div>
+        </div>
+    </footer>
+
 
 </body>
+
 </html>
