--- a/content/detailpage_keyboard.html
+++ b/content/detailpage_keyboard.html
@@ -21,7 +21,7 @@
 
         <div class="share-inner clear">
             <div class="h-logo">
-                <h1><a href="#"><img src="../img/xpg-logo.png" alt="XPG"></a></h1>
+                <h1><a href="../index.html"><img src="../img/xpg-logo.png" alt="XPG"></a></h1>
             </div>
 
             <nav>
